--- a/index.html
+++ b/index.html
@@ -26,10 +26,41 @@
             <div class="title">
               <h1>TROPICAL DEEP HOUSE</h1>
             </div>
+      
+      <div class="content">
+        <div class="left-col">
+          <h1></h1>
+        </div>
+        <div class="right-col">
+          <p></p>
+          <img src="./play.png" id="icon">
+        </div>
+      </div>
+
+      <audio id="mySong">
+        <source src="./1.mp3" type="audio/mp3">
+      </audio>
+
+      <script>
+        var mySong = document.getElementById("mySong");
+        var icon = document.getElementById("icon");
+
+        icon.onclick = function(){
+          if(mySong.paused){
+            mySong.play();
+            icon.src = "./pause.png"
+          }else{
+            mySong.pause();
+            icon.src = "./play.png"
+          }
+        }
+      </script>
+
 
             <div class="button">
               <a href="#" class="btn">PATREON</a>
               <a href="#" class="btn">JOIN US</a>
+      
 
     </header>
   </body>
